new apps added (not finished yet)

--- a/ACR_2010.html
+++ b/ACR_2010.html
@@ -34,7 +34,7 @@
     <table class="acr_2010">
         <tr>
             <td>
-                <label class="containerCb">Shoulder girdle, left
+                <label class="containerCb mr0">Shoulder girdle, left
                     <input name="vItem1" id="vItem1" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Shoulder girdle, right
+                <label class="containerCb mr0">Shoulder girdle, right
                     <input name="vItem5" id="vItem5" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -50,7 +50,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Hip (buttock, trochanter), left
+                <label class="containerCb mr0">Hip (buttock, trochanter), left
                     <input name="vItem2" id="vItem2" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -58,7 +58,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Hip (buttock, trochanter), right
+                <label class="containerCb mr0">Hip (buttock, trochanter), right
                     <input name="vItem6" id="vItem6" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -66,7 +66,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Upper back
+                <label class="containerCb mr0">Upper back
                     <input name="vItem4" id="vItem4" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -74,7 +74,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lower back
+                <label class="containerCb mr0">Lower back
                     <input name="vItem8" id="vItem8" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -82,7 +82,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Jaw, left
+                <label class="containerCb mr0">Jaw, left
                     <input name="vItem3" id="vItem3" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -90,7 +90,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Jaw, right
+                <label class="containerCb mr0">Jaw, right
                     <input name="vItem7" id="vItem7" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -98,7 +98,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Upper arm, left
+                <label class="containerCb mr0">Upper arm, left
                     <input name="vItem9" id="vItem9" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -106,7 +106,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Upper arm, right
+                <label class="containerCb mr0">Upper arm, right
                     <input name="vItem13" id="vItem13" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -114,7 +114,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Upper leg, left
+                <label class="containerCb mr0">Upper leg, left
                     <input name="vItem10" id="vItem10" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -122,7 +122,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Upper leg, right
+                <label class="containerCb mr0">Upper leg, right
                     <input name="vItem14" id="vItem14" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -130,7 +130,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lower arm, left
+                <label class="containerCb mr0">Lower arm, left
                     <input name="vItem16" id="vItem16" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -138,7 +138,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lower arm, right
+                <label class="containerCb mr0">Lower arm, right
                     <input name="vItem18" id="vItem18" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -146,7 +146,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lower leg, left
+                <label class="containerCb mr0">Lower leg, left
                     <input name="vItem17" id="vItem17" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -154,7 +154,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Lower leg, right
+                <label class="containerCb mr0">Lower leg, right
                     <input name="vItem19" id="vItem19" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -162,7 +162,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Neck
+                <label class="containerCb mr0">Neck
                     <input name="vItem12" id="vItem12" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -170,7 +170,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Chest
+                <label class="containerCb mr0">Chest
                     <input name="vItem11" id="vItem11" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -178,7 +178,7 @@
         </tr>
         <tr>
             <td>
-                <label class="containerCb">Abdomen
+                <label class="containerCb mr0">Abdomen
                     <input name="vItem15" id="vItem15" type="checkbox" value="1" onclick="f_Calculer()" />
                     <span class="checkmarkCb"></span>
                 </label>
@@ -212,26 +212,26 @@
                 <td class="score_subtitle">Fatigue (Score 0-3)
                 </td>
                 <td>
-                    <label class="containerRadio smol">0
+                    <label class="containerRadio smol mr0">0
                         <input name="vItemFatigue" id="vItemFatigue1" type="radio" value="0" onclick="f_CalculerFatigue()" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">1
+                    <label class="containerRadio smol mr0">1
                         <input name="vItemFatigue" id="vItemFatigue2" type="radio" value="1" onclick="f_CalculerFatigue()" />
                         <span class="checkmarkRadio"></span>
                     </label>
 
                 </td>
                 <td>
-                    <label class="containerRadio smol">2
+                    <label class="containerRadio smol mr0">2
                         <input name="vItemFatigue" id="vItemFatigue3" type="radio" value="2" onclick="f_CalculerFatigue()" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">3
+                    <label class="containerRadio smol mr0">3
                         <input name="vItemFatigue" id="vItemFatigue4" type="radio" value="3" onclick="f_CalculerFatigue()" />
                         <span class="checkmarkRadio"></span>
                     </label>
@@ -244,25 +244,25 @@
                 <td class="score_subtitle">Waking unrefreshed (Score 0-3)
                 </td>
                 <td>
-                    <label class="containerRadio smol">0
+                    <label class="containerRadio smol mr0">0
                         <input name="vItemWaking" id="vItem15" type="radio" value="0" onclick="f_CalculerWaking()" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">1
+                    <label class="containerRadio smol mr0">1
                         <input name="vItemWaking" id="vItem15" type="radio" value="1" onclick="f_CalculerWaking()" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">2
+                    <label class="containerRadio smol mr0">2
                         <input name="vItemWaking" id="vItem15" type="radio" value="2" onclick="f_CalculerWaking()" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">3
+                    <label class="containerRadio smol mr0">3
                         <input name="vItemWaking" id="vItem15" type="radio" value="3" onclick="f_CalculerWaking()" />
                         <span class="checkmarkRadio"></span>
                     </label>
@@ -275,25 +275,25 @@
                 <td class="score_subtitle">Cognitive symptoms ("brain fog" Score 0-3)
                 </td>
                 <td>
-                    <label class="containerRadio smol">0
+                    <label class="containerRadio smol mr0">0
                         <input name="vItemCognitive" id="vItem15" type="radio" value="0" onclick="f_CalculerCognitive();" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">1
+                    <label class="containerRadio smol mr0">1
                         <input name="vItemCognitive" id="vItem15" type="radio" value="1" onclick="f_CalculerCognitive();f" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">2
+                    <label class="containerRadio smol mr0">2
                         <input name="vItemCognitive" id="vItem15" type="radio" value="2" onclick="f_CalculerCognitive();" />
                         <span class="checkmarkRadio"></span>
                     </label>
                 </td>
                 <td>
-                    <label class="containerRadio smol">3
+                    <label class="containerRadio smol mr0">3
                         <input name="vItemCognitive" id="vItem15" type="radio" value="3" onclick="f_CalculerCognitive();" />
                         <span class="checkmarkRadio"></span>
                     </label>
@@ -309,7 +309,7 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatHeadaches" type="text" id="ResultatHeadaches" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb mt">Headaches (Score 0-1)
+                        <label class="containerCb mt mr0">Headaches (Score 0-1)
                             <input id="vItemHeadaches" type="checkbox" value="0" onclick="f_CalculerHeadaches(); " />
                             <span class="checkmarkCb"></span>
                         </label>
@@ -320,7 +320,7 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatPain" type="text" id="ResultatPain" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb mt">Pain or cramps in lower abdomen (Score 0-1)
+                        <label class="containerCb mt mr0 mb0">Pain or cramps in lower abdomen (Score 0-1)
                             <input id="vItemPain" type="checkbox" value="0" onclick="f_CalculerPain(); " />
                             <span class="checkmarkCb"></span>
                         </label>
@@ -331,7 +331,7 @@
                 <td>
                     <div class="flex-row">
                         <input class="input_score" name="ResultatDepression" type="text" id="ResultatDepression" style="" disabled readonly="readonly"/><br/>
-                        <label class="containerCb mt">Depression (Score 0-1)
+                        <label class="containerCb mt mr0">Depression (Score 0-1)
                             <input  id="vItemDepression" type="checkbox" value="0" onclick="f_CalculerDepression(); " />
                             <span class="checkmarkCb"></span>
                         </label>
