--- a/amor.html
+++ b/amor.html
@@ -132,8 +132,8 @@
     </table>
     <br />
     <div class="score_result">Score
-        <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" />
-        <div id="score_result_confirm"></div>
+        <input name="Resultat" type="text" id="Resultat" style="" disabled readonly="readonly" /><br>
+        <span id="score_result_confirm" class="red bold fontS17"></span>
     </div>
 
 </form>
