--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>SNMR</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="style_common.css" rel="stylesheet" type="text/css" />
 </head>
 
